update record show and edit pages to remove multiple modify-record-button css classes to clarify logic for resizing elements with records js

--- a/app/views/records/_multiple_attachments_edit.html.erb
+++ b/app/views/records/_multiple_attachments_edit.html.erb
@@ -3,7 +3,7 @@
     <h3 class="record-title"><%= @record.title %></h3> 
     <div class="edit-delete-button-container">
       <div class="btn-group modify-record-button">
-        <button type="button" class="btn gray-button modify-record-button" id="delete-record-button" data-dismiss="modal">DELETE</button>
+        <button type="button" class="btn gray-button" id="delete-record-button" data-dismiss="modal">DELETE</button>
       </div>
     </div>
   </div>
