--- a/app/views/records/_single_attachment_edit.html.erb
+++ b/app/views/records/_single_attachment_edit.html.erb
@@ -9,7 +9,7 @@
 
   <%= render 'delete_record_modal' %>
 
-  <hr>
+  <hr class="pagination-hr">
 
   <div class="record-display-container" data-ng-repeat="attachment in data.attachments">
     <img data-ng-show="attachment.media_type === 'image'" 
