--- a/app/views/records/_single_attachment_show.html.erb
+++ b/app/views/records/_single_attachment_show.html.erb
@@ -1,4 +1,4 @@
-  <hr>
+  <hr class="pagination-hr">
 
   <div class="record-display-container" data-ng-repeat="attachment in data.attachments">
     <img data-ng-show="attachment.media_type == 'image'" 
