--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -50,6 +50,29 @@
 * search box *
 *************/
 
+.search-box-container {
+  width: 100%;
+}
+
+/* search box */
+input#search-box {
+  width: 222px;
+  position: relative;
+  left: 50%;
+  margin-left: -111px;
+  border-radius: 4px;
+  padding-left: 32px;
+}
+
+/* search magnifying glass */
+span.glyphicon.glyphicon-search {
+  left: 50%;
+  margin-left: -211px;
+  margin-top: 15px;
+  z-index: 15;
+  color: #9F9F9F;
+}
+
 .input-group-btn {
   min-width: 167px;
 }
@@ -59,8 +82,9 @@ input.btn.btn-primary.btn-lg {
   font-size: 16px;
 }
 
+/* set margins for search box */
 .input-group.input-group-lg {
-  margin: 60px 0px 10px;
+  margin: 40px 0px 10px;
 }
 
 input#keywords {
