--- a/app/views/records/_annotate_records.html.erb
+++ b/app/views/records/_annotate_records.html.erb
@@ -3,7 +3,7 @@
     <div class="over-image-row">
       <h3 class="record-title"><%= @record.title %></h3>  
       <div class="edit-delete-button-container">
-        <div class="btn-group modify-record-button margin-right">
+        <div class="btn-group modify-record-button">
           <%= link_to "Save", record_path(@record), 
             :class => "btn btn-primary blue-button", :id => "edit-record-button" %>
         </div>
