on click of the delete button in the attachment modal, send the attachment id to the parent scope so we can call the delete function

--- a/app/views/records/_attachment_modal.html.erb
+++ b/app/views/records/_attachment_modal.html.erb
@@ -6,7 +6,9 @@
 
       <div class="delete-icon-container">
         <div class="delete-attachment-icon-container"
-             data-ng-click="deleteAttachment(attachment.id)">
+             
+
+             data-ng-click="close(attachment.id)">
           <div class="delete-attachment-icon">
             <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
           </div>
