--- a/app/views/records/_record_form.html.erb
+++ b/app/views/records/_record_form.html.erb
@@ -6,7 +6,7 @@
        data-ngf-multiple="true" 
        data-ngf-allow-dir="true"
        accept="image/*, video/*, audio/*, .pdf, .doc, .docx, .xls, .xlt, .xla, .xlsx, .xlsm, .xltx, .xltm, .xlsb, .xlam, .csv, .tsv, .pptx, .ppt, .potx, .pot, .ppsx, .pps, .pptm, .potm, .ppsm, .ppam"
-       data-ngf-pattern="image/*, video/*, audio/*, .pdf, .doc, .docx, .xls, .xlt, .xla, .xlsx, .xlsm, .xltx, .xltm, .xlsb, .xlam, .csv, .tsv, .pptx, .ppt, .potx, .pot, .ppsx, .pps, .pptm, .potm, .ppsm, .ppam">
+       data-ngf-pattern="'image/*,video/*,audio/*,.pdf,.doc,.docx,.xls,.xlt,.xla,.xlsx,.xlsm,.xltx,.xltm,.xlsb,.xlam,.csv,.tsv,.pptx,.ppt,.potx,.pot,.ppsx,.pps,.pptm,.potm,.ppsm,.ppam'">
 
     <% if @record.errors.any? %>
       <div class="alert alert-danger">
@@ -29,8 +29,7 @@
         data-ng-model="form.files"
         data-on-file-input-change="uploadFiles"
         accept="image/*, video/*, audio/*, .pdf, .doc, .docx, .xls, .xlt, .xla, .xlsx, .xlsm, .xltx, .xltm, .xlsb, .xlam, .csv, .tsv, .pptx, .ppt, .potx, .pot, .ppsx, .pps, .pptm, .potm, .ppsm, .ppam"
-        data-ngf-pattern="image/*, video/*, audio/*, .pdf, .doc, .docx, .xls, .xlt, .xla, .xlsx, .xlsm, .xltx, .xltm, .xlsb, .xlam, .csv, .tsv, .pptx, .ppt, .potx, .pot, .ppsx, .pps, .pptm, .potm, .ppsm, .ppam"
-      >
+        data-ngf-pattern="'image/*,video/*,audio/*,.pdf,.doc,.docx,.xls,.xlt,.xla,.xlsx,.xlsm,.xltx,.xltm,.xlsb,.xlam,.csv,.tsv,.pptx,.ppt,.potx,.pot,.ppsx,.pps,.pptm,.potm,.ppsm,.ppam'">
 
       <span class="btn btn-small btn-default btn-inverse" id="file-upload-button" onclick="$(this).parent().find('input[type=file]').click();">Browse</span>
     </div>
