--- a/app/assets/stylesheets/records.css.scss
+++ b/app/assets/stylesheets/records.css.scss
@@ -508,9 +508,7 @@ span.progress {
   margin: 0 0 14px 0;
   width: 60%;
   background: #efefef;
-  border-left: 1px solid #a7a7a7;
-  border-top: 1px solid #a7a7a7;
-  border-right: 1px solid #a7a7a7;
+  border: 1px solid #a7a7a7;
   margin-left: 20%;
 }
 
@@ -519,9 +517,7 @@ span.progress {
   margin: 0 0 14px 0;
   width:  100%; 
   background:  #efefef;
-  border-left: 1px solid #a7a7a7;
-  border-top: 1px solid #a7a7a7;
-  border-right: 1px solid #a7a7a7;
+  border: 1px solid #a7a7a7;
 }
 
 .masonry-item img, .single-masonry-item img {
