--- a/app/views/records/_attachment_gallery.html.erb
+++ b/app/views/records/_attachment_gallery.html.erb
@@ -12,31 +12,61 @@
          data-ng-repeat="attachment in attachmentsOnCurrentPage" 
          data-ng-cloak>
 
-      <div class="record-attachment-container"
-           data-ng-class="currentPageClass == 'edit' && 'pointer-cursor'"
-           data-ng-mouseenter="currentPageClass == 'edit' && addHoveredAttachment(attachment)"
-           data-ng-mouseleave="currentPageClass == 'edit' && removeHoveredAttachment(attachment)"
-           data-ng-click="currentPageClass == 'edit' && showAttachmentModal(attachment)">
+      <a data-ng-if="currentPageClass == 'show'"
+       data-ng-href="{{attachment.file_upload_url}}">
 
-        <div class="edit-attachment-icon-container">
-          <div class="edit-attachment-icon"
-               data-ng-if="currentPageClass == 'edit' && hoveredAttachments.indexOf(attachment) > -1">
-            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+        <div class="record-attachment-container"
+             data-ng-class="currentPageClass == 'edit' && 'pointer-cursor'"
+             data-ng-mouseenter="currentPageClass == 'edit' && addHoveredAttachment(attachment)"
+             data-ng-mouseleave="currentPageClass == 'edit' && removeHoveredAttachment(attachment)"
+             data-ng-click="currentPageClass == 'edit' && showAttachmentModal(attachment)">
+
+          <div class="edit-attachment-icon-container">
+            <div class="edit-attachment-icon"
+                 data-ng-if="currentPageClass == 'edit' && hoveredAttachments.indexOf(attachment) > -1">
+              <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+            </div>
           </div>
+
+          <img data-ng-src="{{ getImageUrl(attachment) }}"
+               alt="{{ attachment.file_upload_url.split('/').pop().split('?')[0] }}"
+               data-ng-class="{attachmentHover: hover}" >
+
         </div>
+        <input data-ng-if="currentPageClass == 'annotate'"
+               data-ng-model="attachment.annotation" 
+               placeholder="Say something about this file..." 
+               class="attachment-annotation"
+               data-ng-change="saveAnnotation(attachment.annotation, attachment.id)"
+               >
+      </a>
 
-        <img data-ng-src="{{ getImageUrl(attachment) }}"
-             alt="{{ attachment.file_upload_url.split('/').pop().split('?')[0] }}"
-             data-ng-class="{attachmentHover: hover}" >
+      <div data-ng-if="currentPageClass != 'show'">
+        <div class="record-attachment-container"
+             data-ng-class="currentPageClass == 'edit' && 'pointer-cursor'"
+             data-ng-mouseenter="currentPageClass == 'edit' && addHoveredAttachment(attachment)"
+             data-ng-mouseleave="currentPageClass == 'edit' && removeHoveredAttachment(attachment)"
+             data-ng-click="currentPageClass == 'edit' && showAttachmentModal(attachment)">
 
+          <div class="edit-attachment-icon-container">
+            <div class="edit-attachment-icon"
+                 data-ng-if="currentPageClass == 'edit' && hoveredAttachments.indexOf(attachment) > -1">
+              <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+            </div>
+          </div>
+
+          <img data-ng-src="{{ getImageUrl(attachment) }}"
+               alt="{{ attachment.file_upload_url.split('/').pop().split('?')[0] }}"
+               data-ng-class="{attachmentHover: hover}" >
+
+        </div>
+        <input data-ng-if="currentPageClass == 'annotate'"
+               data-ng-model="attachment.annotation" 
+               placeholder="Say something about this file..." 
+               class="attachment-annotation"
+               data-ng-change="saveAnnotation(attachment.annotation, attachment.id)"
+               >
       </div>
-      <input data-ng-if="currentPageClass == 'annotate'"
-             data-ng-model="attachment.annotation" 
-             placeholder="Say something about this file..." 
-             class="attachment-annotation"
-             data-ng-change="saveAnnotation(attachment.annotation, attachment.id)"
-             >
-
     </div>
   </div>
 </div>
