--- a/app/assets/stylesheets/records.css.scss
+++ b/app/assets/stylesheets/records.css.scss
@@ -637,10 +637,10 @@ hr.clear-floats {
 *******************/
 
 .modal-attachment-annotation {
-  width: 300px;
+  width: 100%;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
 }
-
-
 
 /**************
 * record#edit *
@@ -677,9 +677,17 @@ hr.clear-floats {
 }
 
 .attachment-modal-content {
-  width: 300px;
+  width: 50%;
   margin: 0 auto;
   margin-top: 25%;
+}
+
+.attachment-modal-content img {
+  width: 100%;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+  border: 1px solid #fff;
+  border-bottom: none;
 }
 
 .edit-attachment-icon-container,
