--- a/app/assets/stylesheets/records.css.scss
+++ b/app/assets/stylesheets/records.css.scss
@@ -138,6 +138,7 @@ span.btn.btn-small.btn-default.btn-inverse {
   padding: 4px 14px;
   float: left;
   color: #555;
+  margin-top: -4px;
 }
 
 #file-upload-button .btn {
@@ -164,7 +165,14 @@ span.btn.btn-small.btn-default.btn-inverse {
 
 /* set height of container */
 #file-upload-container {
-  padding-bottom: 30px;
+  padding-bottom: 4px;
+}
+
+.max-file-size {
+  padding-left: 12px;
+  display: inline-block;
+  font-style: italic;
+  font-size: .9em;
 }
 
 /**********************
@@ -261,6 +269,7 @@ span.progress {
 #cancel-all-uploads {
   float: right;
   margin-top: 20px;
+  margin-right: 6px;
 }
 
 /****************
@@ -498,6 +507,15 @@ span.progress {
   padding-right: 5px;
 }
 
+
+/* if the current record has < 5 attachments, 
+   don't display the circles and update padding on 
+   the single / multiple page toggle */
+
+.few-attachments {
+  padding-top: 0px !important;
+  margin-top: -10px !important;
+}
 
 /***********************************
 * multiple uploads in records#show *
