cloak user#show angular search bar

--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -11,6 +11,6 @@
   <div class="small-banner-text">A living document of student protest at Yale</div>
 </div>
 
-<div data-ng-app="VoicesApp" data-ng-controller="userController" class="padding-bottom">
+<div data-ng-app="VoicesApp" data-ng-controller="userController" class="padding-bottom" data-ng-cloak>
   <%= render 'angular_search' %>
 </div>
