provide styles for annotation views with only a single page of annotations

--- a/app/assets/stylesheets/records.css.scss
+++ b/app/assets/stylesheets/records.css.scss
@@ -507,6 +507,9 @@ span.progress {
   padding-right: 5px;
 }
 
+.single-page-annotation {
+  margin-top: 8px !important;
+}
 
 /* if the current record has < 5 attachments, 
    don't display the circles and update padding on 
