--- a/app/views/records/_annotate_records.html.erb
+++ b/app/views/records/_annotate_records.html.erb
@@ -13,6 +13,8 @@
     <%= render 'attachment_gallery' %>
 
     <!-- Only show pagination controls if num_pages > 1 -->
-    <%= render 'pagination_controls' %>
+    <%= render 'annotate_pagination_controls' %>
 
-    <hr class="clear-floats">
+    <!-- provide special spacing when annotating records with < 4 attachments -->
+    <hr class="clear-floats" data-ng-show="data.attachments.length > 4">
+    <hr class="clear-floats single-page-annotation" && data-ng-show="data.attachments.length <= 4">
