factor annotation-related pagination out of pagination controls and into its own partial

--- a/app/views/records/_pagination_controls.html.erb
+++ b/app/views/records/_pagination_controls.html.erb
@@ -1,8 +1,9 @@
 <div data-ng-if="data.attachments.length > 1" data-ng-cloak>
   <div class="pagination-controls"
        data-ng-class="data.attachments.length < 5 && 'few-attachments'">
-    <div class="pagination-upper-row"
-         data-ng-if="currentPageClass != 'annotate'">
+    
+    <!-- non-annotation pages -->
+    <div class="pagination-upper-row">
 
       <div class="pagination-circles"
            data-ng-if="multipleRecordView == true"> <!-- Page toggle circles container -->
@@ -110,21 +111,6 @@
           </div>
         </div>
       </div>
-
-      <!-- Page toggle circles --> 
-      <div data-ng-show="currentPageClass == 'annotate'"
-           class="page-toggles bottom-row-page-circles"> <!-- Page toggle circles -->
-        <div class="circle-outer-container">
-          <div class="circle-inner-container" 
-               data-ng-repeat="i in getPageArray( totalNumberOfPages ) track by $index">
-            <a href="" data-ng-click="getPageOfAttachments($index)">
-              <div data-ng-if="currentPage === $index" class="circle active"></div>
-              <div data-ng-if="currentPage != $index" class="circle"></div>
-            </a>
-          </div>
-        </div>
-      </div>
-
     </div> <!-- ./ pagination-lower-row -->
   </div>
 </div>
