don't show pagination upper row on mobile

--- a/app/assets/stylesheets/records.css.scss
+++ b/app/assets/stylesheets/records.css.scss
@@ -872,6 +872,11 @@ hr.clear-floats {
     margin-right: 0px;
   }
 
+  /* don't display upper row of pagination on mobile */
+  .pagination-upper-row {
+    display: none;
+  }
+
 }
 
 
