create styles for i can't even modal

--- a/app/assets/stylesheets/records.css.scss
+++ b/app/assets/stylesheets/records.css.scss
@@ -272,6 +272,14 @@ span.progress {
   margin-right: 6px;
 }
 
+/***********************
+* file too large modal *
+***********************/
+
+.i_cant_even {
+  max-width: 100%;
+}
+
 /****************
 * submit button *
 ****************/
