remove box shadow from FF form

--- a/app/assets/stylesheets/records.css.scss
+++ b/app/assets/stylesheets/records.css.scss
@@ -54,6 +54,11 @@ textarea#record-description {
   padding-top: 30px;
 }
 
+/* FF form styles */
+:-moz-ui-invalid:not(output) {
+  box-shadow: none;
+}
+
 /************************
 * boolean slider styles *
 ************************/
