add type and rel tags to css in application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Voices | <%= yield :page_title %></title>
 
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true, "type" => "text/css", "rel" => "stylesheet" %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true, :async => Rails.env == "production" %>
   
   <%= csrf_meta_tags %>
