--- a/app/views/records/_single_attachment_edit.html.erb
+++ b/app/views/records/_single_attachment_edit.html.erb
@@ -11,27 +11,7 @@
   <hr class="pagination-hr">
 
   <div class="record-display-container" data-ng-repeat="attachment in data.attachments">
-    <img data-ng-show="attachment.media_type === 'image'" 
-         data-ng-src="{{ attachment.medium_image_url }}" 
-         alt="{{ data.record.title }}" >
-
-    <video data-ng-show="attachment.media_type === 'video'" 
-           controls
-           data-ng-attr-poster="{{ attachment.medium_image_url }}"
-           class="loaded-media loaded-video"> 
-      <source data-ng-show="attachment.media_type === 'video'"
-              data-ng-src="{{ attachment.file_upload_url | trusted }}">
-      Sorry! Your browser does not recognize video tags.
-    </video>
-
-    <audio data-ng-show="attachment.media_type === 'audio'" 
-           controls
-           data-ng-attr-poster="{{ attachment.medium_image_url }}"
-           class="loaded-media loaded-audio">
-      <source data-ng-show="attachment.media_type === 'audio'"
-              data-ng-src="{{ attachment.file_upload_url | trusted }}">
-      Sorry! Your browser does not recognize audio tags.
-    </audio>
+    <%= render 'asset_view' %>
   </div>
 
   <hr>
