--- a/app/views/records/_record_form.html.erb
+++ b/app/views/records/_record_form.html.erb
@@ -5,7 +5,6 @@
        data-ngf-drag-over-class="dragover" 
        data-ngf-multiple="true" 
        data-ngf-allow-dir="true"
-       data-ngf-resize="{width: 100, height: 100}"
        accept="image/*, video/*, audio/*, .pdf, .doc, .docx, .xls, .xlt, .xla, .xlsx, .xlsm, .xltx, .xltm, .xlsb, .xlam, .csv, .tsv, .pptx, .ppt, .potx, .pot, .ppsx, .pps, .pptm, .potm, .ppsm, .ppam"
        data-ngf-pattern="'image/*,video/*,audio/*,.pdf,.doc,.docx,.xls,.xlt,.xla,.xlsx,.xlsm,.xltx,.xltm,.xlsb,.xlam,.csv,.tsv,.pptx,.ppt,.potx,.pot,.ppsx,.pps,.pptm,.potm,.ppsm,.ppam'">
 
@@ -29,10 +28,9 @@
         data-ngf-select
         data-ng-model="browsedFiles"
         data-ngf-multiple="true" 
-        data-ngf-allow-dir="true"
+        data-ngf-capture="'camera'"
         id="custom-file-upload"
         data-on-file-input-change="uploadFiles"
-        data-ngf-resize="{width: 100, height: 100}"
         accept="image/*, video/*, audio/*, .pdf, .doc, .docx, .xls, .xlt, .xla, .xlsx, .xlsm, .xltx, .xltm, .xlsb, .xlam, .csv, .tsv, .pptx, .ppt, .potx, .pot, .ppsx, .pps, .pptm, .potm, .ppsm, .ppam"
         data-ngf-pattern="'image/*,video/*,audio/*,.pdf,.doc,.docx,.xls,.xlt,.xla,.xlsx,.xlsm,.xltx,.xltm,.xlsb,.xlam,.csv,.tsv,.pptx,.ppt,.potx,.pot,.ppsx,.pps,.pptm,.potm,.ppsm,.ppam'">Browse</span>
       <div class="max-file-size">Each file is limited to 100MB.</div>
